[package]
name = "rdbc-mysql"
description = " MySQL RDBC Driver"
version = "0.2.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
license = "Apache-2.0"

edition = "2018"

[dependencies]
rdbc = { path = "../rdbc", version = "0.2.0" }

mysql = "24.0.0"
mysql_common = "0.30.6"
twox-hash = "1.6.3"
sqlparser = "0.35.0"
